--- a/package.json
+++ b/package.json
@@ -22,13 +22,12 @@
     "encoding": "^0.1.13",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
-    "firebase": "^9.22.0",
-    "next": "13.4.2",
+    "firebase": "10.0.0",
+    "next": "13.4.9",
     "nookies": "^2.5.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
